src/vmanager/dialog.css
/* ... */
SelectDiskModal > #select-disk-dialog,
SelectSnapshotDialog > #dialog {
  width: 68;
}
#vminstall-storage-label {
  margin-top: 1;
  padding: 0 0;
}
#expert-mode {
  height: 4;
}
#howto-vmtype-dialog {
  width: 80;
  height: auto;
  align: center middle;
}


SelectSnapshotDialog > #dialog,
SnapshotNameDialog > #dialog { height: 20;}
DeleteVMConfirmationDialog > #delete-vm-dialog,
WebConsoleDialog > #webconsole-dialog,
ConfirmationDialog > #dialog { 
  height: 15; 
  border: $error; 
}
InstallVMModal > #custom-iso-container,
InstallVMModal > #autoinstall-container,
InstallVMModal #checksum-container {
  height: 8;
  margin-bottom: 1;
}

.input-row {
    height: 3;
    margin-bottom: 1;
}
InstallVMModal #custom-iso-container Checkbox {
    height: 3;
}
AddChannelModal > #add-channel-container,
WebConsoleConfigDialog > #webconsole-config-dialog, {
  height: 24;
}
SelectOneServerModal > #select-one-server-container, {
  height: 10
}
#automation-collapsible,
#expert-mode-collapsible {
  height: auto;
  border: none;
  margin: 0 0;
  padding: 0 0;
}
#automation-user-config-wrapper,
#repo-iso-container,
#custom-iso-container,
#pool-selection,
#pool-iso-container,
#automation-template-container {
   height: 5;
}
#automation-user-config-wrapper, {
   height: 9;
}
#file-tree {
   height: 90%;
}
FileSelectionModal > #file-selection-dialog,
ConfigModal #config-dialog,
HowToOverlayModal #howto-overlay-dialog,
HowToDiskModal > #howto-disk-dialog,
HowToVirtIOFSModal #howto-virtiofs-dialog,
HowToNetworkModal #howto-network-dialog,
InfoModal #info-modal-dialog,
HowToSSHModal #howto-ssh-dialog {
    width: 80;
    height: 95%;
}

VMTypeInfoModal #howto-vmtype-dialog, {
    width: 92;
    padding: 0 0;
}
RenameVMDialog > #dialog { height: 13; }
ChangeNetworkDialog > #dialog { height: 20; }
InputModal > #input-modal-container { height: 16; }
AddInputDeviceModal > #add-input-container { height: 16; }
PasswordModal > #password-dialog { height: 12; }
XMLDisplayModal > #xml-display-dialog, #xml-textarea, { 
  width: 100%; 
  height: 95%; 
}

/* === CENTERED CONTENT === */
ConfirmationDialog Label,
RenameVMDialog,
AddDiskModal,
EditDiskModal,
WebConsoleDialog,
XMLDisplayModal,
CapabilitiesTreeModal,
MigrationModal,
MoveVolumeModal,
SelectDiskModal > #dialog,
SelectPoolModal > #dialog,
AddInputDeviceModal,
InputModal,
SelectOneServerModal {
  content-align: center middle;
}

/* === LABELS QUESTION === */
SnapshotNameDialog > #question,
ConfirmationDialog > #question,
RenameVMDialog > #question,
SelectDiskModal > #question,
SelectPoolModal > #question,
DeleteVMConfirmationDialog > #question,
SelectServerModal Label,
InputModal Label,
AddInputDeviceModal Label {
  margin-bottom: 1;
  content-align: center middle;
}

/* === BOUTONS CONTAINERS === */
SnapshotNameDialog > #dialog-buttons,
ConfirmationDialog > #dialog-buttons,
WebConsoleDialog > #dialog-buttons,
SelectDiskModal > #dialog-buttons,
SelectPoolModal > #dialog-buttons,
DeleteVMConfirmationDialog > #dialog-buttons,
SelectServerModal Button,
RenameVMDialog > #dialog-buttons,
ChangeNetworkDialog > #dialog-buttons,
AddInputDeviceModal .modal-buttons,
PasswordModal > #dialog-buttons {
  width: 100%;
}

ConfirmationDialog > #dialog-buttons { margin-top: 1; }

/* === LARGES BOUTONS (50%) === */
SnapshotNameDialog Button,
ConfirmationDialog Button,
RenameVMDialog Button,
ChangeNetworkDialog Button,
AddInputDeviceModal Button,
WebConsoleDialog Button,
SelectDiskModal Button,
FileSelectionModal Button,
SelectPoolModal Button,
InstallVMModal Button,
DeleteVMConfirmationDialog Button,
ConfigModal Button,
PasswordModal Button {
  width: 50%;
  margin: 1;
  margin-left: 1;
}
InstallVMModal #browse-iso-btn,
AttachVolumeModal #browse-vol-btn,
InstallVMModal #vm-type-info-btn,
InstallVMModal #manage-templates-btn,
AddDiskModal #browse-disk-btn, {
  height: 3;
  width: 25%;
  padding: 0 0;
  margin: 0 0;
  background: $primary;
}
InstallVMModal #browse-iso-btn,
InstallVMModal #browse-autoinstall-btn, {
  height: 1;
  width: 25%;
}
AddPoolModal #browse-dir-btn, {
  height: 3;
}
ConfirmationDialog Button { margin-right: 1; }

/* === INPUTS === */
SnapshotNameDialog Input,
RenameVMDialog Input,
PasswordModal Input,
AddInputDeviceModal Select {
  margin-bottom: 1;
}
InstallVMModal #custom-iso-path,
InstallVMModal #autoinstall-path,
InstallVMModal #automation-template-select,
AddPoolModal #dir-target-path-input,
AttachVolumeModal #vol-path-input,
AddDiskModal #disk-path-input {
  width: 70%;
}
SelectSnapshotDialog.snapshot-select-dialog > #dialog {
  width: 90;
  height: 25;
}

#snapshot-table {
  height: 15;
  margin-bottom: 1;
  border: round $primary;
}

/* === NETWORK === */
ChangeNetworkDialog > #interface-select,
ChangeNetworkDialog > #network-select {
  margin-bottom: 1;
  height: 4;
}

/* === SWITCHS === */
#remote-console-switch > .switch--slider {
    color: red;
}
#remote-console-switch.switch-on > .switch--slider {
    color: green;
}
#remote-console-switch.switch-off > .switch--slider {
    color: red;
}
#remote-console-switch {
  margin: 0 0;
  border: none;
}

/* === PROGRESS MODAL === */
ProgressModal > #progress-modal-container {
  layout: vertical;
  height: 80%;
  width: 80%;
  border: round $primary;
}

ProgressModal > #progress-title,
ProgressModal > #progress-bar { 
  height: auto; 
}

ProgressModal > #progress-bar { 
  margin-bottom: 1; 
}

ProgressModal .progress-log {
  height: 1fr;
  min-height: 5;
  border: heavy $primary;
  padding: 0 1;
  background: $surface-darken-1;
}

/* === WEBCONSOLE === */
#webconsole-dialog,
#webconsole-config-dialog {
  width: 60;
  content-align: center middle;
  border: round $primary;
}

#webconsole-dialog { 
  width: 85; 
  height: 10; 
}

#config-title,
#config-title-file,
#webconsole-config-title {
  column-span: 2;
  margin: 0 1;
  content-align: center middle;
  width: 100%;
}

.webconsole-config-label { 
  content-align: right middle; 
}
/* ... */

